--- a/css/home.css
+++ b/css/home.css
@@ -1,111 +1,3 @@
-/* ============================== BASE ============================== */
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap');
-@font-face {
-    font-family: 'alarm_clock';
-    src: url('../Fonts/alarm_clock-webfont.woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Burbank';
-    src: url('../Fonts/BurbankBigRegular-Black.woff2');
-    font-weight: 900;
-    font-style: normal;
-}
-
-:root {
-    font-size: 16px;
-    --main-clr: #0B090A;
-    --off-main-clr: #121011;
-    --sec-clr: white;
-    --off-sec-clr: #d3d3d3;
-    --settings-clr: #09123C;
-    --settings-item-clr: #2A2E55;
-    --settings-font-clr: #97DCFE;
-    --island-bg-clr: #106DDD;
-}
-
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: "Montserrat", sans-serif;
-    color: var(--sec-clr);
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    overflow: overlay;
-    background-color: var(--off-main-clr);
-}
-
-a {
-    color: var(--off-sec-clr);
-    text-decoration: none;
-    transition: 0.2s;
-}
-
-a:hover {
-    cursor: pointer;
-    color: var(--sec-clr);
-    transition: 0.2s;
-}
-
-li {
-    list-style: none;
-}
-
-
-/* ========== WEBSITE ========== */
-
-::-webkit-scrollbar {
-    width: 10px;
-}
-
- ::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgba(5, 5, 5, 0.7);
-    transition: 0.2s;
-    border-radius: 100vw;
-}
-
- ::-webkit-scrollbar-thumb:hover {
-    background: rgb(0, 0, 0);
-    transition: 0.2s;
-}
-
-::-webkit-scrollbar-button {
-    display: none;
-}
-
-#preloader {
-    width: 100%;
-    height: 100vh;
-    background: var(--off-main-clr);
-    text-align: center;
-    z-index: 100;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 900;
-    text-transform: uppercase;
-    transition: 2s;
-}
-
 #website-intro {
     display: none;
     justify-content: center;
@@ -163,6 +55,7 @@ li {
 header {
     height: 1000px;
     position: relative;
+    user-select: none;
 }
 
 header::before {
@@ -175,6 +68,7 @@ header::before {
     z-index: -1;
     background: var(--main-clr);
     border-bottom-right-radius: 150px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .nav {
@@ -423,212 +317,17 @@ header::before {
 
 .header-social-item {
     margin: 0 10px;
+    transition: 0.3s;
+}
+
+.header-social-item:hover {
+    transform: rotate(360deg);
+    transition: 0.3s;
 }
 
 .header-social-item svg {
     width: 30px;
     fill: var(--sec-clr);
-}
-
-
-/* ============================== SIDEBAR ============================== */
-
-
-/* ========== SIDEBAR BASE ========== */
-
-.sidebar-button {
-    cursor: pointer;
-}
-
-.sidebar {
-    width: 0px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background-color: var(--off-main-clr);
-    z-index: 5;
-    overflow-x: hidden;
-    transition: 0.2s;
-    box-shadow: 3px 10px 10px black;
-}
-
-.lower-opacity {
-    position: fixed;
-    left: 0;
-    display: none;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.4);
-    z-index: 4;
-    transition: 0.2s;
-}
-
-
-/* ========== SIDEBAR HEADER ========== */
-
-.sidebar-header {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 20px;
-    padding-left: 0;
-    border-bottom: 3px rgba(0, 0, 0, 0.1) solid;
-}
-
-.sidebar-header .sidebar-button {
-    font-size: 2rem;
-    margin-left: 1.5rem;
-}
-
-.sidebar-header .sidebar-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-}
-
-
-/* ========== SIDEBAR BODY ========== */
-
-.sidebar-nav {
-    display: none;
-}
-
-.sidebar-playlists {
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    border-bottom: 3px rgba(0, 0, 0, 0.1) solid;
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-.sidebar-playlists>h2 {
-    font-size: 2rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 900;
-}
-
-.sidebar-playlist {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-    padding: 10px;
-}
-
-.sidebar-playlist ion-icon {
-    color: var(--sec-clr);
-    font-size: 24px;
-}
-
-.sidebar-playlist a {
-    border-bottom: 3px solid transparent;
-    padding: 5px;
-    transition: 0.3s;
-}
-
-.sidebar-playlist a:hover {
-    border-bottom: 3px solid var(--sec-clr);
-    transition: 0.3s;
-}
-
-.sidebar-playlist h3 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 900;
-    font-size: 1rem;
-    white-space: nowrap;
-}
-
-.sidebar-unfinished-videos {
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-.sidebar-unfinished-videos>h2 {
-    font-size: 2rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 900;
-}
-
-.sidebar-unfinished-video {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-    padding: 10px;
-}
-
-.sidebar-unfinished-video img {
-    border: 2px solid var(--sec-clr);
-    border-radius: 3px;
-}
-
-.sidebar-unfinished-video a {
-    border-bottom: 3px solid transparent;
-    padding: 5px;
-    transition: 0.3s;
-}
-
-.sidebar-unfinished-video a:hover {
-    border-bottom: 3px solid var(--sec-clr);
-    transition: 0.3s;
-}
-
-.sidebar-unfinished-video h3 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 900;
-    font-size: .75rem;
-    white-space: nowrap;
-}
-
-
-/* ========== SIDEBAR FOOTER ========== */
-
-.sidebar-footer {
-    margin-top: auto;
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    border-top: 3px rgba(0, 0, 0, 0.1) solid;
-}
-
-.social-media {
-    margin: 20px;
-    width: 30px;
-    fill: var(--sec-clr);
-}
-
-.color-theme {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-left: 3px rgba(0, 0, 0, 0.1) solid;
-}
-
-.color-theme .light-mode {
-    margin: 20px;
-    font-size: 30px;
-}
-
-.color-theme .light-mode:hover {
-    cursor: pointer;
-}
-
-.color-theme .dark-mode {
-    margin: 20px;
-    font-size: 30px;
-}
-
-.color-theme .dark-mode:hover {
-    cursor: pointer;
 }
 
 
@@ -643,7 +342,7 @@ main .container {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10rem;
+    gap: 20rem;
     margin-bottom: 150px;
 }
 
@@ -767,6 +466,30 @@ main .container {
     width: 30vw;
 }
 
+.card img.extra-image1 {
+    position: absolute;
+    top: -100px;
+    width: 150px;
+    z-index: -1;
+    left: -70px;
+}
+
+.card img.extra-image2 {
+    position: absolute;
+    bottom: -70px;
+    width: 150px;
+    transform: rotate(-20deg);
+    left: -60px;
+}
+
+.card img.extra-image3 {
+    position: absolute;
+    bottom: 30%;
+    width: 150px;
+    transform: rotate(20deg);
+    right: -100px;
+}
+
 @media screen and (max-width: 1000px) {
     .nav-items-div {
         display: none;
@@ -879,6 +602,9 @@ main .container {
     }
     main {
         padding: 150px 50px 50px 50px;
+    }
+    .card>a {
+        display: none;
     }
     .logo-container {
         gap: 1rem;
