--- a/css/videos.css
+++ b/css/videos.css
@@ -1,132 +1,69 @@
-/* ==================== BASE ==================== */
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-:root {
-    font-size: 16px;
-    --main-clr: #0B090A;
-    --off-main-clr: #121011;
-    --sec-clr: white;
-    --off-sec-clr: #d3d3d3;
-}
-
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: "Montserrat";
-    font-weight: bold;
-    color: white;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    overflow: overlay;
-    background-color: var(--off-main-clr);
-}
-
-a {
-    color: var(--off-sec-clr);
-    text-decoration: none;
-    transition: 0.2s;
-}
-
-a:hover {
-    cursor: pointer;
-    color: var(--sec-clr);
-    transition: 0.2s;
-}
-
-li {
-    list-style: none;
-}
-
-
-/* ==================== WEBSITE ==================== */
-
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgba(5, 5, 5, 0.7);
-    transition: 0.2s;
-    border-radius: 100vw;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: rgb(0, 0, 0);
-    transition: 0.2s;
-}
-
-::-webkit-scrollbar-button {
-    display: none;
-}
-
-#preloader {
-    width: 100%;
-    height: 100vh;
-    background: var(--off-main-clr);
-    text-align: center;
-    z-index: 100;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
-    font-family: "Montserrat";
-    font-weight: 900;
-    text-transform: uppercase;
-    transition: 2s;
-}
-
-
 /* ========== HEADER ========== */
 
-header {
+.header {
     min-height: 80px;
     background-color: var(--main-clr);
     background-image: url(../Images/Wigglie\ thing.png);
     background-size: cover;
-    padding: 20px;
+    padding: 20px 20px 20px 0;
     position: sticky;
     top: 0;
     z-index: 1;
-    box-shadow: 0 6px 4px -2px var(--main-clr);
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
-nav {
+.nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
 .logo-container {
     display: flex;
+    align-items: center;
 }
 
-header .sidebar-button {
+.logo-container .sidebar-button {
     font-size: 2rem;
-    margin: 0 1.5rem;
+    margin: 0 0 0 1.5rem;
 }
 
-.logo {
+.logo-container .logo {
     height: 40px;
-    width: 240px;
     display: flex;
     align-items: center;
 }
 
-.logo:hover {
-    cursor: pointer;
+.logo a img {
+    vertical-align: bottom;
+}
+
+.nav-items-div {
+    display: flex;
+    flex-grow: 2;
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.nav-list .item {
+    margin: 0 20px;
+    padding: 5px;
+    font-size: 15px;
+    list-style: none;
+}
+
+.nav-list .item>a {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    border-bottom: 3px solid transparent;
+}
+
+.nav-list .item>a:hover {
+    padding-bottom: 5px;
+    border-bottom: 3px solid var(--sec-clr);
 }
 
 .search-bar {
@@ -140,7 +77,7 @@ header .sidebar-button {
     outline: none;
     padding: 10px;
     background-color: var(--off-main-clr);
-    border: 2px solid white;
+    border: 2px solid var(--sec-clr);
     border-radius: 3px;
 }
 
@@ -166,81 +103,33 @@ header .sidebar-button {
     font-size: 1.5rem;
 }
 
-.nav-list {
+.profile {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: .75rem;
 }
 
-.nav-list .item {
-    padding: 0 40px;
-    font-size: 25px;
-    list-style: none;
+.profile img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    border: 1px solid var(--sec-clr);
 }
 
-.nav-list .item>a {
-    font-family: 'Montserrat';
-    font-weight: bold;
+.profile ion-icon {
+    color: var(--sec-clr);
+}
+
+.profile ion-icon:hover {
+    cursor: pointer;
 }
 
 
 /* ============================== SIDEBAR ============================== */
 
 
-/* ========== SIDEBAR BASE ========== */
-
-.sidebar-button {
-    cursor: pointer;
-}
-
-.sidebar {
-    width: 0px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background-color: var(--off-main-clr);
-    z-index: 5;
-    overflow-x: hidden;
-    transition: 0.2s;
-    box-shadow: 3px 10px 10px black;
-}
-
-.lower-opacity {
-    position: fixed;
-    left: 0;
-    width: 0;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.4);
-    z-index: 4;
-    transition: 0.2s;
-}
-
-
-/* ========== SIDEBAR HEADER ========== */
-
-.sidebar-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    border-bottom: 3px rgba(0, 0, 0, 0.1) solid;
-}
-
-.sidebar-header .sidebar-button {
-    font-size: 2rem;
-}
-
-.sidebar-header .sidebar-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-}
-
-
-/* ========== SIDEBAR BODY ========== */
+/* ========== SIDEBAR SEARCH ========== */
 
 .sidebar-search {
     display: none;
@@ -276,82 +165,6 @@ header .sidebar-button {
 
 .sidebar-search .search-bar-icon ion-icon {
     font-size: 1.5rem;
-}
-
-.sidebar-playlists {
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    border-bottom: 3px rgba(0, 0, 0, 0.1) solid;
-    overflow-y: scroll;
-}
-
-.sidebar-playlists>h2 {
-    font-size: 2rem;
-    font-family: "Montserrat";
-    font-weight: 900;
-}
-
-.sidebar-playlist {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-    padding: 10px;
-}
-
-.sidebar-playlist h3 {
-    font-family: "Montserrat";
-    font-weight: 900;
-    font-size: 1rem;
-}
-
-.sidebar-unfinished-videos {
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    overflow-y: scroll;
-}
-
-.sidebar-unfinished-videos>h2 {
-    font-size: 2rem;
-    font-family: "Montserrat";
-    font-weight: 900;
-}
-
-.sidebar-unfinished-video {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-    padding: 10px;
-}
-
-.sidebar-unfinished-video h3 {
-    font-family: "Montserrat";
-    font-weight: 900;
-    font-size: .75rem;
-}
-
-.sidebar-unfinished-video img {
-    border: 2px solid white;
-    border-radius: 3px;
-}
-
-
-/* ========== SIDEBAR FOOTER ========== */
-
-.sidebar-footer {
-    margin-top: auto;
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    padding: 20px;
-    border-top: 3px rgba(0, 0, 0, 0.1) solid;
-}
-
-.social-media {
-    width: 30px;
 }
 
 
@@ -399,7 +212,7 @@ main {
     left: 230px;
     top: 32px;
     width: 20px;
-    fill: white;
+    fill: var(--sec-clr);
 }
 
 .no-video-hint:hover {
@@ -411,8 +224,8 @@ main {
     left: 270px;
     top: 20px;
     background-color: var(--off-main-clr);
-    box-shadow: 0px 2px 15px 10px #000000;
-    color: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 5px 30px, rgba(0, 0, 0, 0.23) 0px 5px 30px;
+    color: var(--sec-clr);
     width: 200px;
     padding: 20px;
     border-radius: 7px;
@@ -428,7 +241,7 @@ main {
     top: 5%;
     transform: rotate(90deg);
     border: 13px solid;
-    border-color: #121011 #0000 #0000 #0000;
+    border-color: var(--off-main-clr) #0000 #0000 #0000;
 }
 
 .videos-grid {
@@ -472,11 +285,11 @@ main {
 /* ========== RESPONSIVE DESIGN ========== */
 
 @media screen and (max-width: 1000px) {
-    .nav-list {
+    .nav-items-div {
         display: none;
     }
-    .logo-container {
-        flex-grow: 1;
+    .nav {
+        justify-content: space-between;
     }
 }
 
