--- a/css/home.css
+++ b/css/home.css
@@ -87,7 +87,7 @@ header::before {
     background-color: var(--off-main-clr);
     position: absolute;
     top: 70px;
-    left: 20px;
+    left: 17px;
     z-index: 3;
     box-shadow: black 0px 5px 25px;
 }
@@ -154,14 +154,13 @@ header::before {
 
 .nav-items-div {
     display: flex;
-    width: 100%;
+    flex-grow: 1;
 }
 
 .nav-list {
     display: flex;
     align-items: center;
     flex-direction: row;
-    flex-grow: 1;
 }
 
 .nav-list .item {
@@ -190,7 +189,7 @@ header::before {
     gap: 15px;
     padding: 10px 15px;
     height: 50px;
-    width: 250px;
+    width: 220px;
     font-size: 100%;
     color: var(--main-clr);
     border-radius: 5px;
@@ -342,7 +341,7 @@ main .container {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20rem;
+    gap: 10rem;
     margin-bottom: 150px;
 }
 
@@ -356,7 +355,45 @@ main .container {
     width: 100%;
     background-color: var(--main-clr);
     border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.container>*:nth-child(1) {
+    background-image: url(/Images/getting_started_picture__with_text2.png);
+    background-repeat: no-repeat;
+    background-size: 55%;
+    background-position: bottom left -40px;
+    height: 37vw;
+    box-shadow: rgba(255, 84, 4, 0.25) 0px 0px 70px;
+}
+
+.container>*:nth-child(1) img {
+    border: 2px rgb(255, 84, 4) solid;
+}
+
+.container>*:nth-child(2) {
+    background-image: url(/Images/just_one_click_picture__with_text2.png);
+    background-repeat: no-repeat;
+    background-size: 57%;
+    background-position: bottom right -60px;
+    height: 37vw;
+    box-shadow: rgba(0, 197, 253, 0.25) 0px 0px 70px;
+}
+
+.container>*:nth-child(2) img {
+    border: 2px rgb(0, 197, 253) solid;
+}
+
+.container>*:nth-child(3) {
+    background-image: url(/Images/no_more_problems__with_text2.png);
+    background-repeat: no-repeat;
+    background-size: 55%;
+    background-position: bottom left -40px;
+    height: 37vw;
+    box-shadow: rgba(238, 1, 1, 0.25) 0px 0px 70px;
+}
+
+.container>*:nth-child(3) img {
+    border: 2px rgb(238, 1, 1) solid;
 }
 
 .card>a {
@@ -461,7 +498,6 @@ main .container {
 }
 
 .card-video img {
-    border: 2px var(--sec-clr) solid;
     border-radius: 5px;
     width: 30vw;
 }
@@ -501,7 +537,7 @@ main .container {
         justify-content: space-between;
     }
     .get-started {
-        width: 200px;
+        width: 220px;
     }
     .sidebar-nav {
         display: block;
@@ -544,6 +580,15 @@ main .container {
         height: 60vw;
         justify-content: center;
     }
+    .container>*:nth-child(1) {
+        background-image: url();
+    }
+    .container>*:nth-child(2) {
+        background-image: url();
+    }
+    .container>*:nth-child(3) {
+        background-image: url();
+    }
     .card>a {
         position: relative;
         bottom: 0;
@@ -578,6 +623,7 @@ main .container {
         height: 30px;
         font-size: 10px;
         padding: 10px;
+        border-radius: 3px;
     }
     .get-started img {
         width: 10%;
@@ -610,9 +656,25 @@ main .container {
     }
     .container .card {
         justify-content: center;
+        gap: 1rem;
     }
     .card>a {
         display: none;
+    }
+    .card-video {
+        width: 100%;
+    }
+    .card-video img {
+        width: 70%;
+    }
+    .card .card-text-desktop {
+        display: none;
+    }
+    .card .card-text-mobile {
+        display: flex;
+    }
+    .card-text-mobile>a {
+        margin-top: 5px;
     }
     .logo-container {
         gap: 1rem;
